Fixed madeWith not showing on smaller devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,7 @@ footer * {
     }
 
     .madeWith {
-        display: none;
+        text-align: center;
     }
 
     .copyright {
